feat : 설정 파일 처리 방식 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.config.activate.on-profile=prod
+my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.1
+#---
+spring.config.activate.on-profile=dev
+my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.2
+#---
+spring.config.activate.on-profile=local
+my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.3
