--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.config.activate.on-profile=prod
-my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.1
-#---
-spring.config.activate.on-profile=dev
-my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.2
-#---
+#spring.config.activate.on-profile=prod
+#my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.1
+##---
+#spring.config.activate.on-profile=dev
+#my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.2
+##---
+#spring.config.activate.on-profile=local
+#my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.3
+
 spring.config.activate.on-profile=local
-my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.3
+spring.config.import=classpath:local.properties
+my.message=\uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.4
