feat : Configuration Tree 지원

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@
 #spring.config.activate.on-profile=local
 #my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.3
 
+my.message=\uD5EC\uB85C\uC6B0
+spring.config.import=optional:configtree:config/
+#---
 spring.config.activate.on-profile=local
 spring.config.import=classpath:local.properties
 my.message=\uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.4
