feat : 프로파일 그룹

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,13 @@
 #spring.config.activate.on-profile=local
 #my.message: \uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.3
 
-my.message=\uD5EC\uB85C\uC6B0
-spring.config.import=optional:configtree:config/
-#---
-spring.config.activate.on-profile=local
-spring.config.import=classpath:local.properties
-my.message=\uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.4
+#my.message=\uD5EC\uB85C\uC6B0
+#spring.config.import=optional:configtree:config/
+##---
+#spring.config.activate.on-profile=local
+#spring.config.import=classpath:local.properties
+#my.message=\uC2A4\uD504\uB9C1 \uBD80\uD2B8 2.4
+
+spring.profiles.group.local=localService,localController
+spring.profiles.group.dev=devService,devController
+spring.profiles.group.test=devService,localController
