feat : 설정 파일 변경 마무리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@
 spring.profiles.group.local=localService,localController
 spring.profiles.group.dev=devService,devController
 spring.profiles.group.test=devService,localController
+
+spring.config.use-legacy-processing=true
